--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve & npm run server",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch",
     "server": "json-server --watch db/db.json"
   },
   "private": true,
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@briebug/jest-schematic": "^3.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.1",
     "immutable": "^4.0.0-rc.14",
@@ -28,19 +29,18 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "12.1.2",
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "27.0.2",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
+    "jest": "27.2.1",
     "json-server": "^0.16.3",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
   }
 }
