--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch",
-    "server": "json-server --watch db/db.json"
+    "server": "json-server --watch db/db.json",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
+    "@cypress/schematic": "^1.5.1",
     "@types/jasmine": "~3.8.0",
     "@types/jest": "27.0.2",
     "@types/node": "^12.11.1",
@@ -41,6 +45,7 @@
     "jest": "27.2.1",
     "json-server": "^0.16.3",
     "karma-coverage": "~2.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "cypress": "8.4.1"
   }
 }
