--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ngrx/store": "^12.4.0",
     "bootstrap": "^5.1.1",
     "immutable": "^4.0.0-rc.14",
     "rxjs": "~6.6.0",
